Fix follow issue when visiting a followed link and then following, fix z-index issue for channel page

--- a/app/assets/stylesheets/base/navbar.scss
+++ b/app/assets/stylesheets/base/navbar.scss
@@ -8,7 +8,7 @@
   display: flex;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 5;
   justify-content: space-between;
   // background-color: rgba(155, 222, 111, .4);
   background-color: #4B367C;
